2012-01-22  Nicolas Bourdaud <nicolas.bourdaud@gmail.com>

	* AUTHORS, configure.ac, src/eegview.c: Update the copyright

2012-01-22  Nicolas Bourdaud <nicolas.bourdaud@gmail.com>

	* data/Makefile.am: Cleanup tarball generation

2012-01-22  Nicolas Bourdaud <nicolas.bourdaud@gmail.com>

	* data/Makefile.am, data/eegview.desktop.in, data/eegview.svg: Don't
	use lab icon (cannot be used under LGPL)

2012-01-21  Nicolas Bourdaud <nicolas.bourdaud@gmail.com>

	* src/eegview.c: Fix warnings

2011-11-10  Nicolas Bourdaud <nicolas.bourdaud@gmail.com>

	* Makefile.am, configure.ac, doc/Makefile.am, doc/eegview.1: Adds a
	eegview minimal manpage

2011-11-10  Nicolas Bourdaud <nicolas.bourdaud@gmail.com>

	* data/Makefile.am, data/eegview.conf, src/eegview.c: Supports for
	eegview.conf configuration file

2011-11-01  Nicolas Bourdaud <nicolas.bourdaud@gmail.com>

	* src/eegview.c: bugfix: --ui-file opetion not taken into account

2011-11-10  Nicolas Bourdaud <nicolas.bourdaud@gmail.com>

	* Makefile.am, debian/changelog, debian/compat, debian/control,
	debian/copyright, debian/docs, debian/menu, debian/rules: Remove
	debian packaging from main development

2011-06-28  Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>

	* debian/changelog: alpha3 release

2011-06-28  Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>

	* src/eegview.c: cleanup commented lines

2011-06-28  Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>

	* src/eegview.c: bugfix: possible segfault in device info

2011-06-17  Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>

	* Makefile.am, configure.ac, data/Makefile.am,
	data/eegview.desktop.in, data/eegview.svg, debian/menu,
	src/Makefile.am: Install icon and desktop entry

2011-06-17  Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>

	* eegpanel.ui, settings.ini, src/fakeact2.c: Clean up old and
	unnecessary files

2011-06-16  Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>

	* debian/changelog, src/eegview.c: bugfix: unclean exit when closed
	before disconnection (alpha2)
