@@ -1,3 +1,5 @@
-Copyright (C) 2009-2012  EPFL (Ecole Polytechnique Fédérale de Lausanne)
+Copyright (C) 2009-2018  EPFL (Ecole Polytechnique Fédérale de Lausanne)
 
 Nicolas Bourdaud <nicolas.bourdaud@gmail.com>
+Serafeim Perdikis <serafeim.perdikis@epfl.ch>
+Luca Tonin <luca.tonin@epfl.ch>
