@@ -1,3 +1,20 @@
 ACLOCAL_AMFLAGS=-I m4
 SUBDIRS = src data doc
 
+EXTRA_DIST = debian/changelog debian/compat debian/control	\
+		debian/copyright debian/docs			\
+		debian/rules debian/menu			\
+		debian/source/format
+
+
+REMOVE_DISTDIR = \
+  { test ! -d "$(distdir)" \
+    || { find "$(distdir)" -type d ! -perm -200 -exec chmod u+w {} ';' \
+         && rm -fr "$(distdir)"; }; }
+
+dist-deb: distdir
+	am__cwd=`pwd` \
+	&& cd $(distdir) \
+	&& CFLAGS="$(CFLAGS)" CXXFLAGS="$(CXXFLAGS)" FFLAGS="$(FFLAGS)" CPPFLAGS="$(CPPFLAGS)" LDFLAGS="$(LDFLAGS)" dpkg-buildpackage \
+	&& cd "$$am__cwd" 
+	$(REMOVE_DISTDIR)
