@@ -2,5 +2,8 @@ EXTRA_DIST=eegview.desktop.in
 
 dist_doc_DATA = eegview.conf
 
+icondir=$(datadir)/icons
+dist_icon_DATA=eegview.svg
+
 desktopdir=$(datadir)/applications
 nodist_desktop_DATA=eegview.desktop
