@@ -1,3 +1,8 @@
+eegview-0.1
+===========
+
+Minor update
+
 
 eegview-0.0
 ===========
